[package]
name = "feed-bouncer-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-bouncer-database = { path = "../feed-bouncer-database" }
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.4"
