[package]
name = "feed-bouncer-database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11.4"
rss = { version = "1", features = ["with-serde", "atom"] }
chrono = "0.4.19"
opml = "1"
sha2 = "0.9.5"
feed-rs = { version = "0.6.1", features = [] }
thiserror= "1.0.26"
